--- a/case2.in
+++ b/case2.in
@@ -1,6 +1,6 @@
 PAN:ABCDE8964L
-NAME:SHUBHAM ATUL RASTOGI
-DOB:18-10-1995
+NAME:HRISHABH ASHOKKUMAR RASTOGI
+DOB:04-02-2000
 Aadhar_no:123456789012
 Mobile No:9876543210
 Email:atulrastogi@gmail.com
@@ -10,9 +10,9 @@ Prov.139(1)fur:No
 Curr.Acc>Rs.1Cr:No
 Exp.foreign>2L:No
 Elec.bill>1L:No
-Salary sec. 17(1):1200000
-prequi. sec. 17(2):20000
-profit lieu sec.17(3):20000
+Salary sec. 17(1):1500000
+prequi. sec. 17(2):0
+profit lieu sec.17(3):0
 allowance u/s 10:30000
 std. deduction u/s 16(ia):40000
 ent. allowance 16(2):0
@@ -24,11 +24,11 @@ arrears:0
 oth. source inc:40000
 inc. 80c:30000
 inc. 80ccc:20000
-inc. 80ccd(1):40000
+inc. 80ccd(1):10000
 inc. 80ccd(1b):0
 inc. 80ccd(2):0
 inc. 80ccg:0
-inc. 80d:100000
+inc. 80d:0
 inc. 80dd:0
 inc. 80ddb:0
 inc. 80e:0
@@ -38,12 +38,13 @@ inc. 80gg:0
 inc. 80gga:0
 inc. 80ggc:0
 inc. 80tta:0
-inc. 80ttb:20000
+inc. 80ttb:0
 inc. 80u:0
+date of deposit:12-12-2020
+advance tax paid:200000
 ifsc code of bank:ABCD1234567
 BANK NAME:Union bank of india
 Account number:123456789012345
 Acc. for refund:123456789012345
 BSR Code:1234567
-date of deposit:20/01/2021
 Sr. no Challan:000345
